add: minecraft & paper version updating also